# WhistGame

./: .gitignore  README.md  configure.ac
docs/: coding-standard.md  data-structures.md  game-rules-ro.md  roadmap.md
src/: Makefile.am
src/AI/: libWhistGameAI.h  robot.c  robot.h
src/ClientWhist/: main.cpp
src/Graphics/: Bid.cpp  Bid.h  BotsChoice.cpp  BotsChoice.h  Button.cpp  Button.h  CardsFromTable.cpp  CardsFromTable.h  FireAnimationWhist.cpp  FireAnimationWhist.h  MenuWindow.cpp  MenuWindow.h  PlayerCards.cpp  PlayerCards.h  Players.cpp  Players.h  ScoreWindow.cpp  ScoreWindow.h  SimpleAnimationWhist.cpp  SimpleAnimationWhist.h  Symbol.cpp  Symbol.h  TableWindow.cpp  TableWindow.h  TypeChoice.cpp  TypeChoice.h  WindowMP.cpp  WindowMP.h  main.cpp
src/ServerWhist/: main.cpp
src/ServerWhist/database/: Database.cpp  Database.h  date.h
src/ServerWhist/database/backup/: backupWhist_2015-04-16.sql
src/ServerWhist/parser/: parser.cpp  parser.h
src/ServerWhist/server/: Commands.h  Connection.cpp  Connection.h  HandlerAllocator.hpp  Player.cpp  Player.h  Players.cpp  Players.h  ProcessingCommand.cpp  ProcessingCommand.h  Server.hpp
src/WhistGameGUI/: gui.c  gui.h  main.c  resources.h
src/libWhistGame/: constants.h  deck.c  deck.h  errors.h  game.c  game.h  hand.c  hand.h  libWhistGame.h  player.c  player.h  round.c  round.h
test/: Makefile.am  run-test.sh  test-deck.c  test-game.c  test-hand.c  test-player.c  test-round.c
